--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ description: "NEVER STOP"
     {% endif %}
     {% if paginator.next_page %}
     <li class="next">
-        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}/">Older Posts &rarr;</a>
     </li>
     {% endif %}
 </ul>
