site: add index.html suffix, remove g+

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
 					<h1>404</h1>
 					<span class="subheading">{{ page.description }}</span>
                     
-                    <a href="{{ site.baseurl }}/archive/" style="color:blue;"><p>查看历史文章</p></a>
+                    <a href="{{ site.baseurl }}/archive/index.html" style="color:blue;"><p>查看历史文章</p></a>
 				</div>
 			</div>
 		</div>
