--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: "NEVER STOP"
 <ul class="pager">
     {% if paginator.previous_page %}
     <li class="previous">
-        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}index.html">&larr; Newer Posts</a>
+        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/index.html">&larr; Newer Posts</a>
     </li>
     {% endif %}
     {% if paginator.next_page %}
