--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ description: "NEVER STOP"
 <ul class="pager">
     {% if paginator.previous_page %}
     <li class="previous">
-        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/index.html">&larr; Newer Posts</a>
+        {% if paginator.previous_page_path == "/" %}
+            <a href="/index.html">&larr; Newer Posts </a>
+        {% else %}
+            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/index.html">&larr; Newer Posts </a>
+        {% endif %}
     </li>
     {% endif %}
     {% if paginator.next_page %}
